# G.E.O.F.F-AERSP497

./: README.md  altPIDanalysis.m
arduino/main/: Final-Report.docx  Milestone Lessons Learned.docx  Pozyx_core.cpp  Pozyx_definitions.h  Pozyx_lib.cpp  Pozyx_only.cpp  Pozyx_only.h  controller.cpp  controller.h  guidance.cpp  guidance.h  main.ino  math_utils.cpp  math_utils.h  motors.cpp  motors.h  multitag_positioning.ino  navigation.cpp  navigation.h  rc_pilot.cpp  rc_pilot.h  sensors.cpp  sensors.h
motor_spinning/__MACOSX/: ._motor_spinning
motor_spinning/__MACOSX/motor_spinning/: ._motor_spinning.ino  ._motors.cpp  ._rc_pilot.h
motor_spinning/motor_spinning/: motor_spinning.ino  rc_pilot.cpp  rc_pilot.h
pace-main/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  gtmax.sln
pace-main/central/x86-win32-vs2010/include/esim/: brwin.h  brwin_ref.h  brwin_sps.h  cnsl.h  cnsl_ref.h  cnsl_sps.h  command.h  db.h  esim.h  esim_ref.h  esim_sps.h  input_ref.h  input_sps.h  plwin.h  plwin_ref.h  plwin_sps.h  quat.h  rand.h  sim_ref.h  sim_sps.h  sul.h  types.h  util.h  vp.h
pace-main/central/x86-win32-vs2010/lib/: esim.lib
pace-main/rmax/: 403.inp  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  aeroMultirotor.c  aeroMultirotor.h  aglSensor.cpp  aglSensor.h  checksum.c  checksum.h  cloud2.rgba  cmake_install.cmake  collisiondetect.cpp  collisiondetect.h  commands.cpp  commands.h  config.inp  controller.cpp  controller.db  controller.h  datalink.cpp  datalink.dbh  datalink.h  dted.cpp  dted.db  dted.h  ether.cpp  ether.h  example_datalink.inp  example_hitl.inp  flightplan.dbh  g128.rgb  gcs.c  gcs.db  gcs.h  gear.c  gear.db  gear.h  generic.db  generic.h  (+65 more)
pace-main/rmax/rmax.dir/Debug/: rmax.exe.recipe  rmax.ilk
pace-main/rmax/rmax.dir/Debug/rmax.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
pace-main/rmax/win32/Debug/workversion/: workversion.recipe
pace-main/rmax/win32/Debug/workversion/workversion.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
pace-main/win32/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
pace-main/win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
